doc: add comments for swaggo to generate swagger docs
Also serves swagger ui at /docs/index.html
